--- a/tmux-2026.conf
+++ b/tmux-2026.conf
@@ -1,61 +1,49 @@
-# Local config
-# if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
-
-# Enable mouse
 set-option -g mouse on
-
-# Remap prefix from 'C-b' to 'C-a'
-unbind C-b                  # remove bind for C-b
 set-option -g prefix C-a
+unbind C-b
 bind-key C-a send-prefix
 
-# Create Panes: window splitting
- # Split vertically
- unbind %
- bind | split-window -h    # Prefix | to create vertical split
- # Split horizontally
- unbind '"'
- bind - split-window -v    # Prefix - to create horizontal split
+unbind %
+bind | split-window -h -c "#{pane_current_path}"
+unbind '"'
+bind - split-window -v -c "#{pane_current_path}"
 
-# resize panes
-bind -r H resize-pane -L 5   # 5 px bigger to the left
-bind -r J resize-pane -D 5   # 5 px bigger down
-bind -r K resize-pane -U 5   # 5 px bigger up
-bind -r L resize-pane -R 5   # 5 px bigger right
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
-# Quick window selection
-bind -r C-h select-window -t :-   # Jump to window on the left
-bind -r C-l select-window -t :+   # Jump to window on the right
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
 
-###########################
-# Colors
-###########################
+set -g set-titles off
+set-option -g allow-rename off
+set-window-option -g automatic-rename off
+set-window-option -g monitor-activity off
 
-# color status bar
-set -g status-style fg=white,bg=colour235
-# color of message bar
-set -g message-style fg=white,bold,bg=green
+# --- Mocha ---
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=#1e1e2e,fg=#cdd6f4' # Base y Texto
 
-# highlight current window
-setw -g window-status-style fg=cyan,bg=colour235
-setw -g window-status-current-style fg=white,bold,bg=red
+set -g status-left-length 20
+set -g status-left '#[fg=#11111b,bg=#b4befe,bold] #S #[default] '
 
-# set color of active pane
-set -g pane-border-style fg=colour240,bg=black
-set -g pane-active-border-style fg=green,bg=black
+set -g status-right-length 50
+set -g status-right '#[fg=#89b4fa] %H:%M #[fg=#11111b,bg=#a6e3a1,bold] #h '
 
-# List of plugins
+setw -g window-status-current-format '#[fg=#fab387,bg=#313244,bold] #I:#W '
+
+setw -g window-status-format '#[fg=#6c7086,bg=#1e1e2e] #I:#W '
+
+set -g pane-border-style 'fg=#313244'
+set -g pane-active-border-style 'fg=#b4befe'
+
+# --- PLUGINS ---
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'leighmcculloch/tmux-colours-superhero'
 set -g @plugin 'tmux-plugins/tmux-open'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
