--- a/tmux-2026.conf
+++ b/tmux-2026.conf
@@ -22,22 +22,53 @@ set-window-option -g automatic-rename off
 set-window-option -g monitor-activity off
 
 # --- Mocha ---
+# set -g status-position bottom
+# set -g status-justify left
+# set -g status-style 'bg=#313244,fg=#cdd6f4'
+#
+# set -g status-left-length 20
+# set -g status-left '#[fg=#11111b,bg=#b4befe,bold] #S #[default] '
+#
+# set -g status-right-length 50
+# set -g status-right '#[fg=#89b4fa,bg=#313244] %H:%M #[fg=#11111b,bg=#a6e3a1,bold] #h '
+#
+# setw -g window-status-current-format '#[fg=#fab387,bg=#45475a,bold] #I:#W '
+# setw -g window-status-format '#[fg=#6c7086,bg=#313244] #I:#W '
+# set -g pane-border-style 'fg=#313244'
+# set -g pane-active-border-style 'fg=#cba6f7'
+# set -g pane-border-lines heavy
+
+# --- Mocha High Contrast ---
 set -g status-position bottom
 set -g status-justify left
-set -g status-style 'bg=#1e1e2e,fg=#cdd6f4' # Base y Texto
 
+set -g status-style 'bg=#313244,fg=#cdd6f4'
 set -g status-left-length 20
 set -g status-left '#[fg=#11111b,bg=#b4befe,bold] #S #[default] '
-
 set -g status-right-length 50
-set -g status-right '#[fg=#89b4fa] %H:%M #[fg=#11111b,bg=#a6e3a1,bold] #h '
+set -g status-right '#[fg=#74c7ec,bg=#313244] %H:%M #[fg=#11111b,bg=#a6e3a1,bold] #h '
+setw -g window-status-current-format '#[fg=#fab387,bg=#45475a,bold] #I:#W '
+setw -g window-status-format '#[fg=#6c7086,bg=#313244] #I:#W '
+set -g pane-border-style 'fg=#1e1e2e'
+set -g pane-active-border-style 'fg=#74c7ec'
 
-setw -g window-status-current-format '#[fg=#fab387,bg=#313244,bold] #I:#W '
-
-setw -g window-status-format '#[fg=#6c7086,bg=#1e1e2e] #I:#W '
-
-set -g pane-border-style 'fg=#313244'
-set -g pane-active-border-style 'fg=#b4befe'
+# --- Catppuccin Latte ---
+# set -g status-position bottom
+# set -g status-justify left
+# set -g status-style 'bg=#eff1f5,fg=#4c4f69' # Base (Mantel) y Texto (Text)
+#
+# set -g status-left-length 20
+# set -g status-left '#[fg=#eff1f5,bg=#7287fd,bold] #S #[default] ' # Texto Base sobre Lavender
+#
+# set -g status-right-length 50
+# set -g status-right '#[fg=#1e66f5] %H:%M #[fg=#eff1f5,bg=#40a02b,bold] #h ' # Blue para la hora, Green para el host
+#
+# setw -g window-status-current-format '#[fg=#fe640b,bg=#ccd0da,bold] #I:#W ' # Peach sobre Surface1
+#
+# setw -g window-status-format '#[fg=#7c7f93,bg=#eff1f5] #I:#W ' # Overlay0 sobre Base
+#
+# set -g pane-border-style 'fg=#ccd0da' # Surface1
+# set -g pane-active-border-style 'fg=#7287fd' # Lavender
 
 # --- PLUGINS ---
 set -g @plugin 'tmux-plugins/tpm'
